--- a/Group_Presentation.Rmd
+++ b/Group_Presentation.Rmd
@@ -63,7 +63,7 @@ class: inverse, center, middle
 Install the **xaringan** package from [Github](https://github.com/yihui/xaringan):
 
 ```{r eval=FALSE, tidy=FALSE}
-remotes::install_github("yihui/xaringan")
+remotes::install_github("yihui/xaringan", force=TRUE)
 ```
 
 --
@@ -110,6 +110,12 @@ class: center, bottom, inverse
 
 # Project Timeline
 
+
+---
+
+# Limitation
+
+1. Push test
 
 ---
 # Hello Ninja
