--- a/index.Rmd
+++ b/index.Rmd
@@ -156,7 +156,7 @@ xaringanExtra::style_panelset_tabs(foreground = "honeydew", background = "#C6CDF
 
 .panel[.panel-name[WBS]
 
-<img src="images/WBS.png" height="400px"/>
+<img src="images/WBS.png" height="400px" style="display: block; margin-left: auto; margin-right: auto;"/>
 
 ]
 
@@ -189,7 +189,7 @@ xaringanExtra::style_panelset_tabs(foreground = "honeydew", background = "#C6CDF
 ```
 
 
-<img src="images/data_value_chain.png" height="320px"/>
+<img src="images/data_value_chain.png" height="350px" style="display: block; margin-left: auto; margin-right: auto;"/>
 
 
 
