--- a/index.Rmd
+++ b/index.Rmd
@@ -26,10 +26,15 @@ style_mono_accent(
 )
 ```
 
+```{css, echo=FALSE}
+.title-slide {
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Jakarta_vue_par_satellite_en_2022.jpg/640px-Jakarta_vue_par_satellite_en_2022.jpg);
+  background-position: 50% 50%;
+  background-size: 40%;
+}
+```
 
-background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Jakarta_vue_par_satellite_en_2022.jpg/640px-Jakarta_vue_par_satellite_en_2022.jpg)
 
-class: cover
 
 # Jakarta Rooftop Farming/Gardening Analysis
 
